fixed styling to align items on left side of each section

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,11 @@ body {
     background-color: var(--offWhite);
 }
 
+h1,
+h3 {
+    color: var(--offWhite);
+}
+
 
 /* Set up the grid to have a header 3 content boxes and a footer */
 
@@ -57,7 +62,6 @@ header {
 }
 
 header h1 {
-    border: 2px solid black;
     width: 50%;
     font-family: 'Kanit', sans-serif;
     text-transform: uppercase;
@@ -112,25 +116,24 @@ article {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 85%;
-    margin: 0 auto;
+    margin: 20px 20px;
     gap: 20px;
 }
 
-article h3 {
+article h3,
+.flexBox h3 {
     font-size: 1.5em;
     font-weight: bold;
 }
 
 .profileImg {
     width: 300px;
-    height: 300px;
-    border-radius: 150px;
+    height: inherit;
+    border-radius: 50%;
 }
 
 article p {
-    flex-basis: 30ch;
-    flex-grow: 0;
+    flex-basis: 45%;
     padding-right: 20px;
     font-size: 1.25em;
 }
@@ -144,15 +147,12 @@ article p {
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 20px 20px;
+    color: var(--offWhite);
 }
 
 .card {
     flex: 0 1 45%;
-    /* max-width: 350px; */
     text-align: center;
-    border: 1px solid black;
-    max-width: 400px;
-    color: var(--offWhite)
 }
 
 .card img {
@@ -174,6 +174,10 @@ article p {
     flex-direction: column-reverse;
     flex-basis: 350px;
     text-align: center;
+}
+
+.connectBox h3 {
+    color: var(--richBlack);
 }
 
 .fa {
@@ -207,9 +211,23 @@ footer h3 {
 /* Shift everything to a single column if on a tablet or smaller */
 
 @media screen and (max-width: 768px) {
+    header h1,
+    nav {
+        width: 100%;
+        text-align: center;
+    }
     nav ul {
         flex-direction: column;
         align-items: center;
+    }
+    nav ul li {
+        box-shadow: 0px 3px 3px rgba(1, 22, 30, 0.1);
+        width: 100%;
+        text-align: center;
+    }
+    nav ul li a {
+        display: block;
+        border-bottom: 1px;
     }
     .container {
         display: flex;
@@ -232,6 +250,7 @@ footer h3 {
     .projects {
         background-color: var(--steelTeal);
         box-shadow: 0 5px 5px gray;
+        color: var(--offWhite);
     }
     .flexBox {
         align-items: center;
